feat(seguridad): Flyway, enums y blindaje de los modulos de taller, correos, equipos y actividades
Flyway (activado):
- V1__baseline_esquema_inicial.sql: las 12 tablas tal como existen hoy,
  tomadas del volcado real de produccion. Con baseline-on-migrate, sobre la
  base existente se marca como aplicada sin ejecutarse; sobre una base vacia
  crea el esquema completo (todo con IF NOT EXISTS).
- V2__add_indexes.sql: PostgreSQL no indexa las claves foraneas por su
  cuenta, y son justo las columnas por las que filtra el sistema (area,
  tecnico, estatus, vencimiento de resguardos).
- V3: clave foranea que faltaba en equipo_reparacion.fn_ticket_id, que
  permitia guardar reparaciones ligadas a tickets inexistentes. Se anade
  NOT VALID para no bloquear la tabla. Ademas documenta en el propio esquema
  las cuatro columnas duplicadas de resguardo y las que no tienen entidad.

Enums:
- PlanTrabajo (plantilla con las claves reales ya presentes en los datos),
  EstadoTaller, EstadoCorreo, Prioridad y NivelVision.
- RolUsuario tenia el valor AREA, que no corresponde a ningun rol: el rol
  real se llama EMPLEADO y AREA es un nivel de vision. Inducia a error.

Modulo de taller:
- @CrossOrigin(origins = "*") ELIMINADO: anulaba la politica CORS y permitia
  que cualquier sitio web consultara el endpoint desde el navegador de un
  usuario con sesion abierta.
- Sin control de rol y fuera de todo patron protegido.
- cambiarEstado recibia un Map sin tipo: cualquier texto valia como estado,
  de modo que un error de escritura dejaba el equipo en un estado inexistente
  e invisible para los filtros. Ahora usa CambioEstadoRequest validado.

Modulo de correos institucionales:
- @CrossOrigin(origins = "*") ELIMINADO. Exponia el directorio de correos.
- Sin control de rol: cualquier EMPLEADO podia leer, crear y eliminar
  cuentas. El borrado definitivo se reserva ahora al ADMINISTRADOR.
- Los catch devolvian "Error al guardar en base de datos: " + e.getMessage(),
  filtrando mensajes de H